# todoist-gtd

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SKILL.md  pyproject.toml  requirements.txt
.arc/: items.jsonl
.beads/: issues.jsonl
.bon/: items.jsonl  understanding.md
.bon/contributions/: 2026-03-29T201500.md  2026-03-30T090000.md
.bon/handoffs/: 2d4d49a3.md  a2483e1c.md  ae510f13.md  ea2ed922.md
.claude-plugin/: plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
docs/: 2026-02-01-weekly-review.md
field-reports/: 2026-02-01-weekly-review.md  2026-02-06-recurring-task-move.md
hooks/: ensure-todoist.sh
references/: PATTERNS.md  TERMINOLOGY.md
scripts/: client_credentials.json.template  flatten-subtasks.py  install.sh  test_todoist.py  todoist.py  todoist_auth.py  todoist_common.py  todoist_secrets.py  verify.sh
skills/coaching/: SKILL.md
skills/coaching/references/: CLI_REFERENCE.md  COACHING.md  GTD_METHODOLOGY.md  PATTERNS.md  TERMINOLOGY.md
src/todoist_gtd/: auth.py  cli.py  common.py  flatten.py  token_store.py
tests/: test_cli.py
todoist_gtd/: __init__.py  cli.py  token_store.py
