[project]
name = "todoist-gtd"
version = "0.4.0"
description = "Todoist CLI with GTD coaching semantics"
requires-python = ">=3.11"
dependencies = [
    "todoist-api-python>=3.0.0",
    "requests>=2.25.0",
]

[project.scripts]
todoist = "todoist_gtd.cli:main"
todoist-flatten = "todoist_gtd.flatten:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/todoist_gtd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
